# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minigrid-json"
description = "A portable representation of Minigrid environments."
readme = "README.md"
requires-python = ">= 3.8"
authors = [{ name = "Troi Williams", email = "willkode@outlook.com" }]
license = { text = "Apache License" }
keywords = ["Memory, Environment, Agent, RL, Gymnasium, Portable, JSON"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "minigrid>=3.0.0",
    "click>=8.1.7",
    "pydantic>=2.10.0",
    "black>=24.8.0",
    "eval_type_backport>=0.2.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/troiwill/minigrid-json"
Repository = "https://github.com/troiwill/minigrid-json"
Documentation = "https://github.com/troiwill/minigrid-json"
"Bug Report" = "https://github.com/troiwill/minigrid-json/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["minigrid_json*"]

# Linters and Test tools #######################################################

[tool.isort]
atomic = true
profile = "black"
append_only = true
src_paths = ["minigrid_json", "tests"]
add_imports = [ "from __future__ import annotations" ]

[tool.pyright]
include = [
    "minigrid_json/**",
]

exclude = [
    "**/node_modules",
    "**/__pycache__",
]

strict = []

typeCheckingMode = "basic"
pythonVersion = "3.8"
typeshedPath = "typeshed"
enableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download the module (i.e. numpy)
#   Therefore, we have to ignore missing imports
reportMissingImports = "none"

reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportPrivateUsage = "warning"
reportUntypedFunctionDecorator = "none"
reportMissingTypeStubs = false
reportUnboundVariable = "warning"
reportGeneralTypeIssues ="none"
reportPrivateImportUsage = "none"

[tool.pytest.ini_options]
filterwarnings = ['ignore:.*step API.*:DeprecationWarning'] # TODO: to be removed when old step API is removed
